Namespace changed to comply with the rules of forking from F-Droid Adjusted functionality to start service on call start, and finish on call end even if recording is not enabled If recording was enabled, recording should have started with service If recording was disabled, call information is maintained to allow start recording during call Adjusted service notification to start main activity if available when call ends Fixed issue with numbers containing invalid characters like asterisk, plus or minus sign

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -9,31 +9,31 @@
 	<string name="list_play_your_recordeed_call">reproducir la grabación</string>
 	<string name="list_send_your_recordeed_call">enviar la grabación</string>
 	<string name="list_erase_your_recordeed_call">borrar la grabación</string>
-	<string name="reciever_start_call">Iniciar grabación de la llamada</string>
-	<string name="reciever_end_call">Finalizar la grabación de la llamada</string>
-	<string name="confirm_delete_title">Eliminar llamada</string>
-	<string name="confirm_delete_text">Está seguro que desea eliminar esta llamada?</string>
+	<string name="receiver_start_call">Empezando a grabar</string>
+	<string name="receiver_end_call">Grabación detenida</string>
+	<string name="confirm_delete_title">Eliminar grabación</string>
+	<string name="confirm_delete_text">Está seguro que desea eliminar esta grabación?</string>
 	<string name="confirm_delete_yes">sí</string>
 	<string name="confirm_delete_no">no</string>
-	<string name="options_title">Opciones de llamada</string>
+	<string name="options_title">Opciones</string>
 	<string name="options_delete">Borrar</string>
 	<string name="confirm_play">Reproducir</string>
 	<string name="confirm_send">Enviar</string>
-	<string name="sendMail_subject">Grabacio de llamada</string>
-	<string name="sendMail_body">Adjunto esta la grabacion de llamada del teléfono</string>
+	<string name="sendMail_subject">Grabación de llamada</string>
+	<string name="sendMail_body">La grabación de llamada esta adjunta</string>
 	<string name="about_title">Acerca de</string>
 	<string name="about_content">Grabador de llamadas por Kobi Krasnoff y Raul Robledo</string>
 	<string name="about_close_button">cerrar</string>
 	<string name="send_mail">Enviar por correo</string>
 	<string name="withheld_number">Número Retenido</string>
-	<string name="menu_record_is_now_enabled">Ahora la aplicación grabará llamadas</string>
-	<string name="menu_record_is_now_disabled">La aplicación no grabará llamadas</string>
-	<string name="no_records_message">No hay grabaciones en este teléfono.\nPara activar la grabación abre el menú principal y selecciona \"Habilitar registro\". \nCon esto la aplicación grabara todas las llamadas entrantes y salientes.</string>
-	<string name="radio_Enable_record">Activar Record</string>
-	<string name="radio_Disable_record">Desactivar Record</string>
+	<string name="menu_record_is_now_enabled">Grabación activada</string>
+	<string name="menu_record_is_now_disabled">Grabación desactivada</string>
+	<string name="no_records_message">No hay grabaciones en este teléfono.\nPara activar la grabación abre el menú principal y selecciona \"Activar grabación\".\nasi la aplicación grabara todas las llamadas entrantes y salientes.</string>
+	<string name="radio_Enable_record">Activar grabación</string>
+	<string name="radio_Disable_record">Desactivar grabación</string>
 	<string name="textview_startup">Por favor, elija si la aplicación podrás grabar tus llamadas.\nSiempre se puede cambiar su elección presionando el botón de menú Android.</string>
-	<string name="dialog_welcome_screen">pantalla de bienvenida</string>
-	<string name="dialog_no_memory">No hay ninguna tarjeta de memoria en su dispositivo.\nPor favor, instale uno.</string>
+	<string name="dialog_welcome_screen">Bienvenida</string>
+	<string name="dialog_no_memory">No hay ninguna tarjeta de memoria en su dispositivo.\nPor favor, instale una.</string>
 	<string name="dialog_close">cerrar</string>
 	<string name="menu_terms">Condiciones de uso</string>
 	<string name="menu_privacy_policy">Política de privacidad</string>
@@ -42,12 +42,12 @@
 	<string name="dialog_privacy_terms">Por favor, haga clic en los botones de abajo para ver las condiciones de uso y política de privacidad</string>
 	<string name="menu_delete_all">Eliminar todas las grabaciones</string>
 	<string name="dialog_delete_all_title">Eliminar todo?</string>
-	<string name="dialog_delete_all_content">Está seguro de que desea eliminar todas las grabaciones?</string>
+	<string name="dialog_delete_all_content">Estas seguro de que quieres eliminar todas las grabaciones?</string>
 	<string name="dialog_delete_all_yes">Sí</string>
 	<string name="dialog_delete_all_no">No</string>
 	<string name="notification_ticker">Comenzando grabación</string>
-	<string name="notification_title">Ahora el teléfono está grabando la conversación</string>
-	<string name="notification_text">El teléfono detendrá la grabación cuando termine la conversación</string>
+	<string name="notification_title">El telefono esta ahora en llamada</string>
+	<string name="notification_text">Si la grabación estaba activa, la grabación debio haber comenzado, de lo contrario la se puede habilitar la grabación, se detendra la grabación al termine la conversación</string>
 	<string name="record_impossible">Desafortunadamente, no es posible grabar las llamadas en este dispositivo. (Usualmente porque otra aplicación/servicio esta usando el micrófono)</string>
 </resources>
  
