--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,33 +7,33 @@
     <string name="menu_Disable_record">Disable Record</string>
     <string name="title_activity_main">Call recorder for android</string>
     <string name="list_play_your_recordeed_call">play your recorded call</string>
-	<string name="list_send_your_recordeed_call">send your recorded call</string>
-	<string name="list_erase_your_recordeed_call">erase your recorded call</string>
-	<string name="reciever_start_call">Start record call</string>
-	<string name="reciever_end_call">End Record call</string>
-	<string name="confirm_delete_title">Call deletion</string>
-	<string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
-	<string name="confirm_delete_yes">yes</string>
-	<string name="confirm_delete_no">no</string>
-	<string name="options_title">Recording options</string>
-	<string name="options_delete">Delete</string>
-	<string name="confirm_play">Play</string>
-	<string name="confirm_send">Send</string>
-	<string name="sendMail_subject">Your record from your phone</string>
-	<string name="sendMail_body">This is a call record from your phone</string>
-	<string name="about_title">About</string>
-	<string name="about_content">Call recorder by Kobi Krasnoff and Raul Robledo</string>
-	<string name="about_close_button">Close</string>
-	<string name="send_mail">Send Mail</string>
-	<string name="withheld_number">Withheld Number</string>
-	<string name="menu_record_is_now_enabled">The application is now enable to record calls</string>
-	<string name="menu_record_is_now_disabled">The application is now not enable to record calls</string>
-	<string name="no_records_message">There are no recordings in this phone.\nTo enable record ability open the main menu and choose \"Enable Record\".\nAfter that the application will record all your incoming and outgoing calls.</string>
-	<string name="radio_Enable_record">Enable Record</string>
-	<string name="radio_Disable_record">Disable Record</string>
-	<string name="textview_startup">Please choose if the application will record your calls.\nYou can always alter your choosing by pressing the Android menu button.</string>
-	<string name="dialog_welcome_screen">Welcome Screen</string>
-	<string name="dialog_no_memory">There is no memory card in your device.\nPlease install one.</string>
+    <string name="list_send_your_recordeed_call">send your recorded call</string>
+    <string name="list_erase_your_recordeed_call">erase your recorded call</string>
+    <string name="receiver_start_call">Start record call</string>
+    <string name="receiver_end_call">End Record call</string>
+    <string name="confirm_delete_title">Call deletion</string>
+    <string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
+    <string name="confirm_delete_yes">yes</string>
+    <string name="confirm_delete_no">no</string>
+    <string name="options_title">Recording options</string>
+    <string name="options_delete">Delete</string>
+    <string name="confirm_play">Play</string>
+    <string name="confirm_send">Send</string>
+    <string name="sendMail_subject">Your record from your phone</string>
+    <string name="sendMail_body">This is a call record from your phone</string>
+    <string name="about_title">About</string>
+    <string name="about_content">Call recorder by Kobi Krasnoff and Raul Robledo</string>
+    <string name="about_close_button">Close</string>
+    <string name="send_mail">Send Mail</string>
+    <string name="withheld_number">Withheld Number</string>
+    <string name="menu_record_is_now_enabled">Call recording enabled</string>
+    <string name="menu_record_is_now_disabled">Call recording disabled</string>
+    <string name="no_records_message">There are no recordings in this phone.\nTo enable record ability open the main menu and choose \"Enable call recording\".\nAfter that the application will record all your incoming and outgoing calls.</string>
+    <string name="radio_Enable_record">Enable call recording</string>
+    <string name="radio_Disable_record">Disable call recording</string>
+    <string name="textview_startup">Please choose if the application should record your calls.\nYou can always enable or disable recording by pressing the Android menu button.</string>
+    <string name="dialog_welcome_screen">Welcome Screen</string>
+    <string name="dialog_no_memory">There is no memory card in your device.\nPlease install one.</string>
     <string name="dialog_close">Close</string>
     <string name="menu_terms">Terms of use</string>
     <string name="menu_privacy_policy">Privacy Policy</string>
@@ -46,7 +46,8 @@
     <string name="dialog_delete_all_yes">Yes</string>
     <string name="dialog_delete_all_no">No</string>
     <string name="notification_ticker">Recording is now Starting</string>
-	<string name="notification_title">The phone is now recording the conversation</string>
-	<string name="notification_text">The phone will stop the recording when the conversation will end</string>
-	<string name="record_impossible">Unfortunately, it is not possible to record calls in this device. (Usually because another application/service is using the microphone in the background)</string>
+    <string name="notification_title">The phone is now on a call</string>
+    <string name="notification_text">If recording was enabled, recording should have started, if not you can enable recording in the application, the phone will stop the recording when the conversation ends</string>
+    <string name="record_impossible">Unfortunately, it is not possible to record calls in this device. (Usually because another application/service is using the microphone in the background)</string>
+
 </resources>
